[gd_scene load_steps=13 format=3 uid="uid://bmk675i5gpaw3"]

[ext_resource type="Script" path="res://scripts/inventory/magic_broom.gd" id="1_pv3ed"]
[ext_resource type="Texture2D" uid="uid://bgefiekycqdis" path="res://sprites/items/item_spawnables/magic_broom.png" id="2_pdm3i"]
[ext_resource type="PackedScene" uid="uid://c3340dgdfq7vc" path="res://prefabs/item_spawnables/utilities/small_star.tscn" id="2_rcuy7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oeq2"]
size = Vector2(12, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c6mi"]
atlas = ExtResource("2_pdm3i")
region = Rect2(0, 0, 13, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nowq"]
atlas = ExtResource("2_pdm3i")
region = Rect2(13, 0, 13, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxo2n"]
atlas = ExtResource("2_pdm3i")
region = Rect2(0, 5, 13, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa0i4"]
atlas = ExtResource("2_pdm3i")
region = Rect2(13, 5, 13, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dqrq"]
atlas = ExtResource("2_pdm3i")
region = Rect2(0, 10, 13, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_jodp4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c6mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nowq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxo2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa0i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dqrq")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_an87j"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3xkx0"]
_data = {
"spin": SubResource("Animation_an87j")
}

[node name="magic_broom" type="Node2D"]
texture_filter = 1
script = ExtResource("1_pv3ed")
star = ExtResource("2_rcuy7")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("RectangleShape2D_8oeq2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="main_body/main_body_2"]
sprite_frames = SubResource("SpriteFrames_jodp4")
autoplay = "default"
frame_progress = 0.317464

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="spawn_star" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3xkx0")
}

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="spawn_star" to="." method="_on_spawn_star_timeout"]
